[package]
name = "nup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
package-json = "0.3.0"
semver = "1.0.16"
simple-error = "0.2.3"
